# openpuffer

./: .facts  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  skills-lock.json
.claude/skills/: anneal  bugbash  bughunt  timeboxed-iterating
.github/workflows/: benchmark-large-dispatch.yml  benchmark-large-live.yml  ci.yml  nightly-stress.yml  op-scaling-refresh.yml
benchmarks/: CHANGELOG_LARGE_DATASET.md  OPERATOR_AFTER_LIVE_RUN.md  OPERATOR_RUNBOOK_QUICK.md  OP_VS_TPUF.md  README.md  SCALING_VS_TPUF_QUICKSTART.md  requirements.txt
benchmarks/cross_check/: README.md  id_overlap.py  run_spotcheck.py  test_id_overlap_spotcheck.py
benchmarks/cross_check/fixtures/: overlap-l1-mock.json
benchmarks/report/: JSON_SCHEMA_VERSIONS.md  LARGE_BENCHMARK_JSON_SCHEMA_VERSION  OP_SCALING_JSON_SCHEMA_VERSION  README.md  compare_op_scaling_to_tpuf.py  render_report_schema.py  schema_version.py  test_compare_op_scaling_to_tpuf.py  test_op_scaling_schema.py  test_utc_timestamps.py  utc_timestamps.py
benchmarks/report/fixtures/: ingest-large-l1.json  large-aws-l1.json  tpuf-l1.json
benchmarks/reports/: OP_VS_TPUF_HANDOFF.md
benchmarks/results/: OPERATOR_G3_G4_ATTEMPT.md  baseline-10k.json  cold-50k-v3.json  id-overlap-l1.example.json  ingest-large-l1-schema-minio-10k.example.json  ingest-large-l1-schema-minio.example.json  ingest-large-l2.example.json  ingest-large-l3.example.json  large-aws-l1-schema-minio-10k.example.json  large-aws-l1-schema-minio.example.json  large-aws-l2.example.json  large-aws-l3.example.json  nightly-100k.json  op-scaling-100k-warm.json  op-scaling-100k.json  op-scaling-10k-synthetic128.json  op-scaling-10k-warm.json  op-scaling-10k.json  op-scaling-50k.json  scaling-comparison-summary.json  scaling-comparison.csv  tpuf-l2.example.json  tpuf-l3.example.json  tpuf-official-reference.json
benchmarks/tpuf_driver/: README.md  requirements.txt  run_benchmark.py  test_run_benchmark.py
benchmarks/workloads/: EMBEDDINGS.md  QUERY_SPEC.md  generate_synthetic.py  test_generate_synthetic.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARKS_GITHUB_ACTIONS_SECRETS.md  COMPARISON.md  PLAN_LARGE_DATASET_BENCHMARK.md  PLAN_SPFRESH_AND_COLD_1M.md
docs/archive/: PLAN_LARGE_DATASET_BENCHMARK_PHASES_1-7.md
docs/reports/: BENCHMARK_VS_TURBOPUFFER_2026-06-03.md  BENCHMARK_VS_TURBOPUFFER_2026-06-04.md  BENCHMARK_VS_TURBOPUFFER_2026-06-08.md  BENCHMARK_VS_TURBOPUFFER_EXEMPLAR.md  BENCHMARK_VS_TURBOPUFFER_SCALING_2026-06-04.md  LARGE_DATASET_HARNESS_HANDOFF.md  OPENS_VS_TPUF_SCALING_COMPARISON.md
scripts/: bench-1m.sh  bench-large.sh  check-benchmark-artifacts.sh  check-large-aws-gates.sh  check-tpuf-gates.sh  compare-op-scaling-to-tpuf.sh  dev-serve.sh  dev-up.sh  diagnose-index-lag.sh  ensure-compose-minio.sh  estimate-large-benchmark-cost.sh  fill-comparison-from-report.sh  ingest-large.sh  install-benchmark-python-deps.sh  normalize-benchmark-json.sh  preflight-aws-ec2.sh  preflight-id-overlap.sh  preflight-large-benchmark-all.sh  preflight-tpuf.sh  print-scaling-verdict.sh  render-report.sh  run-aws-large-benchmark.sh  run-id-overlap-spotcheck.sh  run-integration-s3.sh  run-large-benchmark-program.sh  run-minio-correctness-gates.sh  run-minio-large-schema-example.sh  run-op-scaling-benchmark.sh  run-tpuf-large-benchmark.sh  test-no-secret-echo.sh  test-shellcheck-benchmark-scripts.sh  test_bench-large-secondary-schema.sh  test_check-benchmark-artifacts.sh  test_check-large-aws-gates.sh  test_check-tpuf-gates.sh  test_compare-op-scaling-to-tpuf.sh  test_estimate-large-benchmark-cost.sh  test_fill-comparison-from-report.sh  test_ingest-large-retry.sh  test_ingest-timing-schema.sh  (+11 more)
scripts/lib/: benchmark-python-deps.sh  benchmark-utc-timestamp.sh  estimate-large-benchmark-cost.sh  ingest-large-retry.sh  large-benchmark-aws-gates.sh  large-benchmark-exit-codes.sh  large-benchmark-json-version.sh  large-benchmark-preflight.sh  large-benchmark-serve-ready.sh  large-benchmark-tpuf-gates.sh  namespace-meta.sh  op-scaling-json-version.sh  tier-validate.sh
src/: api.rs  billing.rs  buffer.rs  cache.rs  commit_lock.rs  config.rs  export.rs  filter.rs  health.rs  indexer.rs  lib.rs  limits.rs  main.rs  meta.rs  metrics.rs  models.rs  namespace.rs  namespace_list_cache.rs  recall.rs  s3_batch.rs  schema.rs  search.rs  storage.rs  vector_encoding.rs  view.rs  view_cache.rs  wal.rs  wal_compaction.rs  warm.rs
src/index/: filter.rs  fts.rs  fts_tokenizer.rs  mod.rs  vector.rs
tests/: bench_cold.rs  integration_external_s3.rs  integration_s3.rs  perf_namespace.rs  stress_50k.rs  synthetic_workload_gate.rs
tests/common/: mod.rs  s3_harness.rs  synthetic_workload.rs
(+15 files in other folders)
