[package]
name = "openpuffer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Object-storage-backed vector and full-text search (turbopuffer-compatible API)"
license = "MIT OR Apache-2.0"

[lib]
name = "openpuffer"
path = "src/lib.rs"

[[bin]]
name = "openpuffer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
integration = []