[package]
name = "openpuffer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Object-storage-backed vector and full-text search (turbopuffer-compatible API)"
license = "MIT OR Apache-2.0"

[lib]
name = "openpuffer"
path = "src/lib.rs"

[[bin]]
name = "openpuffer"
path = "src/main.rs"

[[test]]
name = "integration_s3"
path = "tests/integration_s3.rs"
required-features = ["integration"]

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
integration = []
perf = []

[[test]]
name = "perf_namespace"
path = "tests/perf_namespace.rs"
required-features = ["perf"]

[dev-dependencies]
tempfile = "3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["minio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }