[package]
name = "openpuffer"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Object-storage-backed vector and full-text search (turbopuffer-compatible API)"
license = "MIT OR Apache-2.0"

[lib]
name = "openpuffer"
path = "src/lib.rs"

[[bin]]
name = "openpuffer"
path = "src/main.rs"

[[test]]
name = "integration_s3"
path = "tests/integration_s3.rs"
required-features = ["integration"]

[[test]]
name = "integration_external_s3"
path = "tests/integration_external_s3.rs"
required-features = ["integration"]

[dependencies]
anyhow = "1"
base64 = "0.22"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
bincode = "1.3"
crc32fast = "1.4"
half = "2.4"
rust-stemmers = "1.2"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["parsing", "formatting"] }
uuid = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
integration = []
bench = ["integration"]
large_stress = ["integration"]
perf = []
metrics = ["dep:prometheus"]

[dependencies.prometheus]
version = "0.13"
optional = true

[[test]]
name = "perf_namespace"
path = "tests/perf_namespace.rs"
required-features = ["perf"]

[[test]]
name = "stress_50k"
path = "tests/stress_50k.rs"
required-features = ["large_stress"]

[[test]]
name = "bench_cold"
path = "tests/bench_cold.rs"
required-features = ["bench"]

[dev-dependencies]
tempfile = "3"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sdk-s3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["minio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
urlencoding = "2.1"